[gd_scene load_steps=5 format=3 uid="uid://cykjwa1hfv0ou"]

[ext_resource type="PackedScene" uid="uid://dmi5gp1r0ieeh" path="res://assets/beach ball.glb" id="1_a410u"]
[ext_resource type="Script" uid="uid://c3jyc5fxv2lag" path="res://scripts/beach_ball.gd" id="1_gcwwn"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_gcwwn"]
rough = true
bounce = 0.5

[sub_resource type="SphereShape3D" id="SphereShape3D_gcwwn"]
radius = 0.25607163

[node name="BeachBall" type="RigidBody3D" groups=["player"]]
mass = 100.0
physics_material_override = SubResource("PhysicsMaterial_gcwwn")
angular_damp = 1.0
script = ExtResource("1_gcwwn")

[node name="beach ball" parent="." instance=ExtResource("1_a410u")]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("SphereShape3D_gcwwn")

[node name="CameraPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.8660254, 0.5, 0, -0.5, 0.8660254, 0, 0, 0)
top_level = true

[node name="Camera3D" type="Camera3D" parent="CameraPoint"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 6.038376)

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.35900635, 0)
top_level = true
target_position = Vector3(0, -20, 0)
hit_from_inside = true
debug_shape_thickness = 5

[node name="RayCastTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="RayCastTimer" to="." method="_on_ray_cast_timer_timeout"]
